# modwire-mermaid

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
compatibility/: README.md  __init__.py  cases.py  catalog.json  inventory.py  runner.mjs
compatibility/features/: architecture.json  class.json  event-modeling.json  file-tree.json  flowchart.json  mindmap.json  sequence.json  state.json  swimlane.json  timeline.json  user-journey.json
compatibility/snapshots/source/: architecture.comprehensive.mmd  architecture.minimal.mmd  class.comprehensive.mmd  class.minimal.mmd  event-modeling.comprehensive.mmd  event-modeling.minimal.mmd  file-tree.comprehensive.mmd  file-tree.minimal.mmd  flowchart.comprehensive.mmd  flowchart.minimal.mmd  mindmap.focused-recursive-unicode.mmd  mindmap.minimal.mmd  sequence.comprehensive.mmd  sequence.minimal.mmd  state.comprehensive.mmd  state.minimal.mmd  swimlane.comprehensive.mmd  swimlane.minimal.mmd  timeline.comprehensive.mmd  timeline.minimal.mmd  user-journey.comprehensive.mmd  user-journey.minimal.mmd
compatibility/toolchains/latest-11/: package-lock.json  package.json
compatibility/toolchains/minimum/: package-lock.json  package.json
docs/: migration-2.md
docs/architecture/: README.md  compatibility.md
docs/class-diagram/: README.md  compatibility.md
docs/event-modeling/: README.md  compatibility.md
docs/file-tree/: README.md  compatibility.md
docs/flowchart/: README.md  compatibility.md
docs/mindmap/: README.md  compatibility.md
docs/sequence/: README.md  compatibility.md
docs/state/: README.md  compatibility.md
docs/swimlanes/: README.md  compatibility.md
docs/timeline/: README.md  compatibility.md
docs/user-journey/: README.md  compatibility.md
examples/: compile_timeline.py
scripts/: check_package_contents.py  generate_compatibility.py  generate_docs.py  generate_schemas.py  verify_release.py
src/modwire_mermaid/: __init__.py  compiler.py  composition.py  contracts.py  diagrams.py  documentation.py  facade.py  graph.py  graph_rendering.py  registry.py  schema.py  source.py  style_rendering.py  syntax.py  template.py
src/modwire_mermaid/architecture/: __init__.py  compiler.py  diagram.j2  diagram.py  template.py
src/modwire_mermaid/class_diagram/: __init__.py  compiler.py  diagram.j2  diagram.py  rendering.py  template.py
src/modwire_mermaid/event_modeling/: __init__.py  compiler.py  diagram.j2  diagram.py  template.py
src/modwire_mermaid/file_tree/: __init__.py  compiler.py  diagram.py
src/modwire_mermaid/flowchart/: __init__.py  compiler.py  diagram.py  rendering.py
src/modwire_mermaid/mindmap/: __init__.py  compiler.py  diagram.py
src/modwire_mermaid/schemas/v2/: diagram.schema.json
src/modwire_mermaid/sequence/: __init__.py  compiler.py  diagram.j2  diagram.py  template.py
src/modwire_mermaid/state/: __init__.py  compiler.py  diagram.j2  diagram.py  template.py
src/modwire_mermaid/swimlane/: __init__.py  compiler.py  diagram.j2  diagram.py  template.py
src/modwire_mermaid/timeline/: __init__.py  compiler.py  diagram.j2  diagram.py  template.py
src/modwire_mermaid/user_journey/: __init__.py  compiler.py  diagram.j2  diagram.py  template.py
tests/: __init__.py  test_architecture_contract.py  test_architecture_v2.py  test_builders.py  test_compatibility_corpus.py  test_contract_boundaries.py  test_diagrams.py  test_documentation.py  test_injection_boundaries.py  test_new_diagrams.py  test_public_api.py  test_repository.py  test_sequence_and_swimlane.py  test_serialization.py  test_source.py  test_v2_contract.py  test_validation_contract.py
tests/architecture_fixtures/: __init__.py  cycle.importlinter  direct.importlinter
tests/architecture_fixtures/cycle/: __init__.py  alpha.py  beta.py
tests/architecture_fixtures/direct/: __init__.py  consumer.py  feature.py
