[build-system]
requires = ["hatchling>=1.28", "hatch-vcs>=0.5"]
build-backend = "hatchling.build"

[project]
name = "modwire-mermaid"
dynamic = ["version"]
description = "Typed deterministic Mermaid source generation for Python."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "9orky" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]

dependencies = [
    "jinja2>=3.1",
    "pydantic>=2.12",
]

[project.optional-dependencies]
dev = ["build>=1.3", "import-linter>=2.11", "packaging>=25", "pyright>=1.1.403", "pytest>=9", "ruff>=0.14", "twine>=6"]

[dependency-groups]
dev = ["build>=1.3", "import-linter>=2.11", "packaging>=25", "pyright>=1.1.403", "pytest>=9", "ruff>=0.14", "twine>=6"]

[project.urls]
Repository = "https://github.com/modwire/modwire-mermaid"
Issues = "https://github.com/modwire/modwire-mermaid/issues"

[tool.hatch.version]
source = "vcs"
tag-pattern = '^v(?P<version>\d+\.\d+\.\d+)$'
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/modwire_mermaid/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/modwire_mermaid"]

[tool.hatch.build.targets.sdist]
include = ["examples", "src", "tests", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-config", "--strict-markers"]
filterwarnings = ["error"]

[tool.ruff]
line-length = 120
extend-exclude = ["**/_version.py"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.importlinter]
root_package = "modwire_mermaid"

[[tool.importlinter.contracts]]
name = "Diagram features are mutually independent"
type = "independence"
modules = [
    "modwire_mermaid.architecture",
    "modwire_mermaid.class_diagram",
    "modwire_mermaid.event_modeling",
    "modwire_mermaid.file_tree",
    "modwire_mermaid.flowchart",
    "modwire_mermaid.mindmap",
    "modwire_mermaid.sequence",
    "modwire_mermaid.state",
    "modwire_mermaid.swimlane",
    "modwire_mermaid.timeline",
    "modwire_mermaid.user_journey",
]

[[tool.importlinter.contracts]]
name = "Shared contracts and rendering do not import diagram features"
type = "forbidden"
source_modules = [
    "modwire_mermaid.compiler",
    "modwire_mermaid.contracts",
    "modwire_mermaid.facade",
    "modwire_mermaid.graph",
    "modwire_mermaid.graph_rendering",
    "modwire_mermaid.registry",
    "modwire_mermaid.source",
    "modwire_mermaid.style_rendering",
    "modwire_mermaid.syntax",
    "modwire_mermaid.template",
]
forbidden_modules = [
    "modwire_mermaid.architecture",
    "modwire_mermaid.class_diagram",
    "modwire_mermaid.event_modeling",
    "modwire_mermaid.file_tree",
    "modwire_mermaid.flowchart",
    "modwire_mermaid.mindmap",
    "modwire_mermaid.sequence",
    "modwire_mermaid.state",
    "modwire_mermaid.swimlane",
    "modwire_mermaid.timeline",
    "modwire_mermaid.user_journey",
]
